[package]
authors = ["Xiyu Zhai <xiyuzhai95@gmail.com>"]
edition = "2021"
description = "toolchain installer for the Husky programming language"
homepage = "https://github.com/xiyuzhai-husky-lang/huskyup"
keywords = ["huskyup", "multihusky", "install", "proxy"]
license = "MIT OR Apache-2.0"
name = "huskyup"
readme = "README.md"
repository = "https://github.com/rust-lang/rustup"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.31"
cfg-if = "1.0"
chrono = "0.4"
clap = { version = "2", features = ["wrap_help"] }

[lib]
name = "rustup"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = true

# Reduce build time by setting proc-macro crates non optimized.
[profile.release.build-override]
opt-level = 0
